2008-01-07  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: map "unsigned long" to LPUGen.

2008-01-02  Mike Kestner  <mkestner@novell.com>

	* gtk/MoveFocusHandler.cs: obsolete event types.
	* gtk/TextView.custom: obsolete move-focus signal. 
	* gtk/Window.custom: obsolete move-focus signal. 
	Compat fixes for removal of signals from gtk+ API. [Fixes #350770]

2007-12-17  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl: parse 'typedef struct\n{' properly.

2007-12-12  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: fix marshaling for ArrayCount params where
	casting is required, like gsize/size_t count parameters.

2007-12-11  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl: fix tightloop in single-line prop declarations.

2007-12-06  Mike Kestner  <mkestner@novell.com>

	* * : update to 2.12 API.

2007-12-04  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: add goffset mapping.

2007-12-04  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: check for default off_t size
	* generator/SymbolTable.cs: map off_t based on configure check.
	* generator/Makefile.am: add OFF_T_FLAGS to compile.

2007-12-03  Mark Probst  <mark.probst@gmail.com>

	* generator/SymbolTable.cs: Added "where" to the list of mangled
	names.

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl: collapse embedded multiline function fields 
	to a single line.  [Fixes #344853]

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBase.cs: move Name stuff from subclasses.
	Check for (G|S)et<UpperCaseLetter> in new Has props.
	* generator/Method.cs:
	* generator/VirtualMethod.cs: refactor out Name stuff. Use
	new Has(G|S)etterName props.
	* pango/Pango.metadata: workaround Has/Hash collision with
	the old broken getter check. [Fixes #344954]

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs: ignore GCHandles with null targets since