@@ -1,7 +1,7 @@
 #!/bin/sh
 # Run this to set configure.in up for an API version.
 
-GTK_SHARP_VERSION=2.11.0
+GTK_SHARP_VERSION=2.11.90
 ASSEMBLY_VERSION=2.12.0.0
 POLICY_VERSIONS="2.4 2.6 2.8 2.10"
 GTK_REQUIRED_VERSION=2.12.0
