@@ -1,10 +1,12 @@
 prefix=${pcfiledir}/../..
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
+gapidir=${prefix}/share/gapi-2.0
 
 
 Name: GLib#
 Description: GLib# - .NET Binding for the glib library.
 Version: @VERSION@
-Cflags: 
+Cflags: -I:${gapidir}/glib-api.xml
 Libs: -r:${libdir}/mono/@PACKAGE_VERSION@/glib-sharp.dll
+
