@@ -1,3 +1,10 @@
+2008-01-11  Mike Kestner  <mkestner@novell.com>
+
+	* bootstrap-2.12: update version to 2.11.90.
+	* configure.in.in: incorporate build service patch.
+	* glib/glib-sharp-2.0.pc.in: add cflags for new api.xml.
+	* glib/Makefile.am: install api.xml to correct dir.
+
 2008-01-07  Mike Kestner  <mkestner@novell.com>
 
 	* generator/SymbolTable.cs: map "unsigned long" to LPUGen.
